frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
  namespace: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
